--- a/exercise-incorrect.html
+++ b/exercise-incorrect.html
@@ -12,12 +12,10 @@
     <header>
       <h1 class="red-text">A Demo Page</h1>
       <span>Check out <a href="https://scripted">ScriptEd!</a></span>
-      <i class="fa fa-caret-left"></i>
-    </header>
-
-    <section>
-      <img src="'https://media.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif'">
-    </section>
+    
+    
+      <img src="https://media.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif">
+      </header>
 
   </body>
 </html>
